--- a/pos_app/templates/pos.html
+++ b/pos_app/templates/pos.html
@@ -25,7 +25,7 @@
 
     h1 {
         font-size: 2em;
-        margin-bottom: 20px;
+        margin-bottom: 0px;
         color: #34495e;
         text-align: center;
     }
@@ -95,6 +95,8 @@
         background-color: transparent;
         border-radius: 4px;
         cursor: pointer;
+        position: relative;
+        top: -8px;
         transition: background-color 0.3s ease, color 0.3s ease;
     }
 
